[package]
name = "qq-chat-analyzer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = { version = "0.3", features = ["thread-pool"] }
regex = "1.0"
indicatif = "0.16"
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
num_cpus = "1.13"
clap = "3.0.0-beta.5"
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "sqlite", "mysql", "any" ] }
async-std = { version = "1", features = [ "attributes" ] }
chrono = "0.4.19"